Improve style for collapsing processes/collections, improved collection layout, fixed billing plan layout, add option to retrieve (supported) feature count.

--- a/components/base.css
+++ b/components/base.css
@@ -104,4 +104,28 @@
 }
 .vue-component .tabular .value {
 	flex: 3;
+	overflow: auto;
+}
+
+/* Collapsible panels */
+
+.vue-component .collapsible {
+	margin-left: 1em;
+}
+.vue-component .collapsible h2 {
+	margin-left: -1em;
+	cursor: pointer;
+	border-bottom: 0;
+}
+.vue-component h2 .toggle {
+	display: none;
+}
+.vue-component .collapsible h2 .toggle {
+	display: inline-block;
+	width: 0.5em;
+	margin: 0 0.25em;
+}
+.vue-component .collapsible.expanded h2 .toggle {
+	top: 1em;
+	transform: rotate(90deg);
 }
